# lib/db/src/schema/index.ts
@@ -17,4 +17,6 @@
 //   export type InsertPost = z.infer<typeof insertPostSchema>;
 //   export type Post = typeof postsTable.$inferSelect;
 
-export {}
+export * from "./conversations";
+export * from "./messages";
+export * from "./projects";
